styles.css
@layer beam-reset, beam-base, beam-tokens, beam-recipes, beam-utilities;

@tailwind utilities;

html {
  font-feature-settings: "rlig" 1, "calt" 1, "ss01" 1, "ss06" 1 !important;
}

/* [data-reach-skip-link] {
  @apply sr-only;
}

[data-reach-skip-link]:focus {
  @apply not-sr-only fixed ml-6 top-0 bg-white text-lg px-6 py-2 mt-2 outline-none focus:ring z-50;
} */

.dark .invert-on-dark {
  filter: invert(1) brightness(1.8);
}

body {
  /* Reset body width in order to support radix modal's scroll-lock */
  width: unset !important;
}

.nextra-content {
  color: var(--beam-business-colors-mono-primary-bg);
}

a._underline {
  color: var(--beam-business-colors-blue-primary);
  text-decoration: underline;
  text-underline-offset: 1px;
  text-decoration-color: var(--beam-business-colors-blue-qauartnery);
}

a._underline:hover, a._underline:focus-visible, a._underline:active {
  color: var(--beam-business-colors-blue-tertiary);
  text-decoration: underline;
  text-decoration-color: var(--beam-business-colors-blue-qauartnery);
}

